--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 body{
-    background-color: pink;
+    font-family: "Quicksand";
 }
 
+.navbar, 
+.navbar .navbar-link, 
+.navbar .navbar-brand,
+.navbar .navbar-toggler{
+    color: #112A46 !important;
+}
+
+footer{
+     background-color: #112A46;
+     color: #CFF4FC;
+}
