--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+*{
+    box-sizing: border-box;
+}
 
 body{
     font-family: "Quicksand";
@@ -11,7 +17,7 @@ body{
     color: #112A46 !important;
 }
 
-footer{
+.footer{
      background-color: #112A46;
      color: #CFF4FC;
 }
